trying to fix alignment

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
       "header header"
       "menu content"
       "footer footer";
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 4fr 1fr;
     height: 100vh;
     gap: 3px;
     background-color: black;
@@ -17,7 +18,7 @@
   .container div.header {
     grid-area: header;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Playfair Display', 'Arial Narrow', Arial, sans-serif;
   }
   .container div.menu {
     grid-area: menu;
